--- a/lab02.ipynb
+++ b/lab02.ipynb
@@ -29,13 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def check_anagram(first, second):\n",
     "    \"\"\" Sprawdza czy podane wyrazy są anagramami \"\"\"\n",
-    "    pass\n",
+    "    return sum([1 for x in zip(sorted(first), sorted(second)) if x[0] == x[1]]) == len(first)\n",
     "\n",
     "print(check_anagram(\"abcd\", \"dcba\") == True)\n",
     "print(check_anagram(\"aba\", \"baa\") == True)\n",
@@ -52,16 +63,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def gaderypoluki(text, key):\n",
     "    \"\"\"\n",
     "    Funkcja powinna szyfrować (lub odszyfrować) tekst szyfrem GADERYPOLUKI (lub podobnym)\n",
     "    https://pl.wikipedia.org/wiki/Gaderypoluki\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    result = \"\"\n",
+    "    for i in text:\n",
+    "        if i.upper() in key:\n",
+    "            index = key.index(i.upper())\n",
+    "            x = index\n",
+    "            if index % 2 == 0:\n",
+    "                x += 1\n",
+    "            else:\n",
+    "                x -= 1\n",
+    "            result += key[x].lower()\n",
+    "        else:\n",
+    "            result += i.lower()\n",
+    "    return result\n",
+    "    #walic dicta\n",
     "\n",
     "print(gaderypoluki('Ala ma kota', 'GADERYPOLUKI') == 'gug mg iptg')\n",
     "print(gaderypoluki('gug mg iptg', 'GADERYPOLUKI') == 'ala ma kota')"
@@ -88,17 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def even_numbers_from_list(data):\n",
     "    \"\"\"Zwraca podlistę \"data\" zawierającą wyłącznie parzyste liczby\"\"\"\n",
-    "    result = []\n",
-    "    for point in data:\n",
-    "        if point % 2 == 0:\n",
-    "            result.append(point)\n",
-    "    return result\n",
+    "    return [i for i in data if i % 2 == 0]\n",
     "\n",
     "print(even_numbers_from_list([1, 2, 3, 4]) == [2, 4])\n",
     "print(even_numbers_from_list(range(10)) == list(range(0, 10, 2)))\n",
@@ -108,18 +148,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def words_analyze(words):\n",
     "    \"\"\"Zwraca listę trójek, gdzie i'ta trójka to (i, i'te słowo, długość i'tego słowa)\"\"\"\n",
-    "    result = []\n",
-    "    i = 0\n",
-    "    for word in words:\n",
-    "        result.append((i, word, len(word)))\n",
-    "        i += 1\n",
-    "    return result\n",
+    "    return [(i, words[i], len(words[i])) for i in range(len(words))]\n",
+    "\n",
     "\n",
     "print(words_analyze(['tomek', 'jadzia']) == [(0, 'tomek', 5), (1, 'jadzia', 6)])\n",
     "print(words_analyze([]) == [])"
@@ -127,21 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def count_words_starting_with_given_letter(text, letter):\n",
     "    \"\"\"Zwraca słownik gdzie kluczami są wszystkie słowa występujące w tekście \n",
     "    rozpoczynające się na zadaną literę, a wartością ile razy wystąpiy\"\"\"\n",
-    "    result = {}\n",
-    "    for word in text.split():\n",
-    "        if word[0] == letter:\n",
-    "            if word not in result:\n",
-    "                result[word] = 1\n",
-    "            else:\n",
-    "                result[word] += 1\n",
-    "    return result\n",
+    "    return {word: sum([1 for x in text.split() if x == word]) for word in text.split() if word[0] == letter}\n",
     "\n",
     "print(count_words_starting_with_given_letter('ola ma kota o imieniu ola', 'o') == {'ola': 2, 'o': 1})\n",
     "print(count_words_starting_with_given_letter('ola ma kota o imieniu ola', 'k') == {'kota': 1})\n",
@@ -230,19 +278,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func1(n):\n",
-    "    pass"
+    "    return[(x, y) for x in range(n) for y in range(n)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(func1(3)==[(0, 0), (0, 1), (0, 2), (1, 0), (1, 1), (1, 2), (2, 0), (2, 1), (2, 2)])\n",
     "print(func1(0)==[])"
@@ -257,19 +314,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func2(n):\n",
-    "    pass"
+    "    return[(x, y) for x in range(n) for y in range(n) if x < y]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(func2(3)==[(0, 1), (0, 2), (1, 2)])\n",
     "print(func2(4)==[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)])"
@@ -284,19 +350,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func3(n):\n",
-    "    pass"
+    "    return[(x, y) for x in range(n) for y in range(n) if x > y]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(func3(3)==[(1, 0), (2, 0), (2, 1)])\n",
     "print(func3(4)==[(1, 0), (2, 0), (2, 1), (3, 0), (3, 1), (3, 2)])"
@@ -318,19 +393,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def powerset(x):\n",
-    "    pass"
+    "   #from iteration import combination     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, None, None]\n",
+      "False\n",
+      "[None, None, None]\n",
+      "False\n",
+      "[None, None, None]\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(powerset('abc')==[[], ['a'], ['b'], ['a', 'b'], ['c'], ['a', 'c'], ['b', 'c'], ['a', 'b', 'c']])\n",
     "print(powerset([1, 2, 3])==[[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]])\n",
@@ -376,7 +464,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ef_python",
    "language": "python",
    "name": "python3"
   },
@@ -390,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
