--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -325,7 +325,7 @@
     "    return int(sum([i + n / i for i in range(1, int(n ** 0.5) + 1) if n % i == 0]) - n)\n",
     "\n",
     "def zaprzyjaznione(n):\n",
-    "    lista_zaprzyjaznionych = []\n",
+    "    lista_zaprzyjaznionych = list()\n",
     "    for i in range(1, n + 1):\n",
     "        x = suma_dzielnikow(i)\n",
     "        if suma_dzielnikow(x) == i and x > i:\n",
@@ -2310,38 +2310,11 @@
     "# Nie lubię wcięć, chce używać nawiasów {} do bloków kodu\n",
     "from __future__ import braces"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[101.0, 52.0, 29.0, 25.0, 20.0]\n",
-      "[1, 2, 4, 5, 10, 20, 25, 50]\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = 100\n",
-    "print([i + (n / i) for i in range(1, int(n ** 0.5) + 1) if n % i == 0])\n",
-    "print([i for i in range(1, n // 2 + 1) if n % i == 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ef_python",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -2355,7 +2328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
