--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,6 @@
    "source": [
     "def even_list(n):\n",
     "    \"\"\"Funkcja powinna zwrocic liste liczb parzystych <= n\"\"\"\n",
-    "    assert n >= 2\n",
     "    return list(range(2, int(n) + 1, 2))\n",
     "print(even_list(1) == [])\n",
     "print(even_list(2) == [2])\n",
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -298,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -307,13 +306,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
       "True\n",
-      "[(220, 284)]\n",
       "True\n",
-      "[(220, 284), (1184, 1210)]\n",
       "True\n",
-      "[(220, 284), (1184, 1210), (2620, 2924), (5020, 5564), (6232, 6368), (10744, 10856), (12285, 14595)]\n",
       "True\n"
      ]
     }
@@ -325,6 +320,7 @@
     "    return int(sum([i + n / i for i in range(1, int(n ** 0.5) + 1) if n % i == 0]) - n)\n",
     "\n",
     "def zaprzyjaznione(n):\n",
+    "    # return[(i, suma_dzielnikow(i)) for i in range(1, n + 1) if suma_dzielnikow(suma_dzielnikow(i)) == i and suma_dzielnikow(i) > i] Nie wiem czy to ma sens :D\n",
     "    lista_zaprzyjaznionych = list()\n",
     "    for i in range(1, n + 1):\n",
     "        x = suma_dzielnikow(i)\n",
@@ -354,8 +350,6 @@
     }
    ],
    "source": [
-    "from math import gcd\n",
-    "\n",
     "def phi_euler(n):\n",
     "    \"\"\"Funkcja powinna zwrócić wartość funkcji phi Eulera\"\"\"\n",
     "    s = n\n",
@@ -390,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1245,7 @@
       "True\n",
       "True\n",
       "True\n",
-      "23.6 μs ± 5.48 μs per loop (mean ± std. dev. of 7 runs, 40 loops each)\n"
+      "10.9 μs ± 3.03 μs per loop (mean ± std. dev. of 7 runs, 40 loops each)\n"
      ]
     }
    ],
@@ -1264,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,16 +1267,12 @@
     "    Funkcja powinna sprawdzać, czy dana liczba n jest doskonała\n",
     "    https://pl.wikipedia.org/wiki/Liczba_doskona%C5%82a\n",
     "    \"\"\"\n",
-    "    s = 0\n",
-    "    for i in range(1, n):\n",
-    "        if n % i == 0:\n",
-    "            s += i\n",
-    "    return n == s "
+    "    return n == sum([i for i in range(1, n) if n % i == 0]) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2119,7 @@
       "True\n",
       "True\n",
       "True\n",
-      "29.8 μs ± 2.83 μs per loop (mean ± std. dev. of 7 runs, 40 loops each)\n"
+      "20.5 μs ± 6.31 μs per loop (mean ± std. dev. of 7 runs, 40 loops each)\n"
      ]
     }
    ],
@@ -2160,19 +2150,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def solve(d, m, tab):\n",
-    "    pass  "
+    "    return sum([1 for i in range(0, (len(tab) - m + 1)) if sum(tab[i: i+ m]) == d])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -2191,11 +2181,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(solve(d, m, tab)==2)\n",
     "print(solve(d1, m1, tab1)==0)\n",
@@ -2220,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2237,6 +2237,7 @@
     "import re\n",
     "def HowManyIntegers(n):\n",
     "    return sum(1 for x in range(n) if re.match('^[0279]+$',str(x)))-1\n",
+    "    return sum(set(str(x)) <= {'0','2','7','9'} for x in range(n))-1\n",
     "\n",
     "print(HowManyIntegers(1) == 0) \n",
     "print(HowManyIntegers(10) == 3) # 2,7,9 \n",
