--- a/lab02.ipynb
+++ b/lab02.ipynb
@@ -63,15 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n"
+      "False\n",
+      "False\n"
      ]
     }
    ],
@@ -81,20 +81,22 @@
     "    Funkcja powinna szyfrować (lub odszyfrować) tekst szyfrem GADERYPOLUKI (lub podobnym)\n",
     "    https://pl.wikipedia.org/wiki/Gaderypoluki\n",
     "    \"\"\"\n",
-    "    result = \"\"\n",
-    "    for i in text:\n",
-    "        if i.upper() in key:\n",
-    "            index = key.index(i.upper())\n",
-    "            x = index\n",
-    "            if index % 2 == 0:\n",
-    "                x += 1\n",
-    "            else:\n",
-    "                x -= 1\n",
-    "            result += key[x].lower()\n",
-    "        else:\n",
-    "            result += i.lower()\n",
-    "    return result\n",
-    "    #walic dicta\n",
+    "\n",
+    "    dict = {\n",
+    "        'G': 'A',\n",
+    "        'D': 'E',\n",
+    "        'R': 'Y',\n",
+    "        'P': 'O',\n",
+    "        'L': 'U',\n",
+    "        'K': 'I',\n",
+    "        'A': 'G',\n",
+    "        'E': 'D',\n",
+    "        'Y': 'R',\n",
+    "        'O': 'P',\n",
+    "        'U': 'L',\n",
+    "        'I': 'K'\n",
+    "    }\n",
+    "    return \"\".join(dict.get(char, char) for char in text)\n",
     "\n",
     "print(gaderypoluki('Ala ma kota', 'GADERYPOLUKI') == 'gug mg iptg')\n",
     "print(gaderypoluki('gug mg iptg', 'GADERYPOLUKI') == 'ala ma kota')"
@@ -205,9 +207,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b': 1, 'a': 1}\n",
+      "True\n",
+      "{'b': 3, 'a': 1}\n",
+      "True\n",
+      "{'b': 3, 'c': 3, 'a': 8}\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def merge_dicts(a, b, f):\n",
     "    '''\n",
@@ -219,7 +234,9 @@
     "    sumie zbiorów kluczy ze słowników a i b. Gdy jakiś klucz występuje w obu słownikach, to wartość ma być\n",
     "    wynikiem funkcji f obliczonej na wartościach dla danego klucza w słowniku a i słowniku b\n",
     "    '''\n",
-    "    pass\n",
+    "    print({k: f(a[k], b[k]) if k in a.keys() and k in b.keys() else a.get(k, b.get(k)) for k in set(a.keys()) | set(b.keys())})\n",
+    "    return{k: f(a[k], b[k]) if k in a.keys() and k in b.keys() else a.get(k, b.get(k)) for k in set(a.keys()) | set(b.keys())}\n",
+    "\n",
     "\n",
     "def add(a,b):\n",
     "    return a + b\n",
@@ -246,15 +263,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 5}\n",
+      "True\n",
+      "{2, 3, 5, 7}\n",
+      "True\n",
+      "{2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97}\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "\n",
     "def primes(N):\n",
     "    \"\"\"Zwraca zbiór liczb pierwszych od 0 do N włącznie\"\"\"\n",
-    "    pass\n",
+    "    return({ i for i in range(2, N + 1) if sum([1 for j in range(2, int(sqrt(i) + 1)) if i % j == 0]) == 0})\n",
     "    \n",
     "print(primes(5) == {2, 3, 5})\n",
     "print(primes(10) == {2, 3, 5, 7})\n",
@@ -447,6 +477,10 @@
    "source": [
     "def primes_extra_b(N):\n",
     "    \"\"\"Zwraca zbiór liczb pierwszych od 0 do N włącznie\"\"\"\n",
+    "    if N == 2:\n",
+    "        return {2}\n",
+    "    else:\n",
+    "\n",
     "    pass\n",
     "\n",
     "print(primes_extra_b(5) == {2, 3, 5})\n",
@@ -464,7 +498,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ef_python",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -478,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
