--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -211,10 +211,7 @@
    ],
    "source": [
     "def is_palindrome(word):\n",
-    "    for i in range(int(len(word)/2)):\n",
-    "        if word[i] != word[~i]:\n",
-    "            return False\n",
-    "    return True\n",
+    "    return sum([1 for i in range(int(len(word)/2)) if word[i] == word[~i]]) == int(len(word)/2)\n",
     "\n",
     "print(is_palindrome('ala') == True)\n",
     "print(is_palindrome('ananas') == False)\n",
@@ -224,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -2315,7 +2312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "EF_Python",
+   "display_name": "ef_python",
    "language": "python",
    "name": "python3"
   },
@@ -2329,7 +2326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
