--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -1264,7 +1264,7 @@
     "    Funkcja powinna sprawdzać, czy dana liczba n jest doskonała\n",
     "    https://pl.wikipedia.org/wiki/Liczba_doskona%C5%82a\n",
     "    \"\"\"\n",
-    "    return n == sum([i for i in range(1, n) if n % i == 0]) "
+    "    return n == sum([i for i in range(1, n) if n % i == 0]) #ds"
    ]
   },
   {
