--- a/lab02.ipynb
+++ b/lab02.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -344,17 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func2(n):\n",
-    "    return[(x, y) for x in range(n) for y in range(n) if x < y]"
+    "    return[(x, y) for x in range(n) for y in range(x+1, n)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -380,17 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func3(n):\n",
-    "    return[(x, y) for x in range(n) for y in range(n) if x > y]"
+    "    return[(x, y) for x in range(n) for y in range(x)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -423,29 +423,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def powerset(x):\n",
-    "   #from iteration import combination     "
+    "   #return [[]] + [s + [e] for i, e in enumerate(x) for s in powerset(x[:i])]\n",
+    "   #print([[x[j] for j in range(len(x)) if f\"{i:0{len(x)}b}\"[::-1][j] == '1'] for i in range(2**len(x))])\n",
+    "   return [[x[j] for j in range(len(x)) if f\"{i:0{len(x)}b}\"[::-1][j] == '1'] for i in range(2**len(x))]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[None, None, None]\n",
-      "False\n",
-      "[None, None, None]\n",
-      "False\n",
-      "[None, None, None]\n",
-      "False\n"
+      "[[], ['a'], ['b'], ['a', 'b'], ['c'], ['a', 'c'], ['b', 'c'], ['a', 'b', 'c']]\n",
+      "True\n",
+      "[[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]]\n",
+      "True\n",
+      "[[], ['abc'], [5], ['abc', 5], [6], ['abc', 6], [5, 6], ['abc', 5, 6]]\n",
+      "True\n"
      ]
     }
    ],
@@ -471,14 +473,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def primes_extra_b(N):\n",
-    "    \"\"\"Zwraca zbiór liczb pierwszych od 0 do N włącznie\"\"\"\n",
-    "    pass\n",
+    "    def sieve(numbers):\n",
+    "        if not numbers:\n",
+    "            return set()\n",
+    "        first, rest = numbers[0], numbers[1:]\n",
+    "        filtered = filter(lambda x: x % first != 0, rest)\n",
+    "        return {first} | sieve(list(filtered)) \n",
     "\n",
+    "    return sieve(list(range(2, N + 1)))\n",
+    "\n",
+    "    \n",
     "print(primes_extra_b(5) == {2, 3, 5})\n",
     "print(primes_extra_b(10) == {2, 3, 5, 7})\n",
     "print(primes_extra_b(100) == {2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97})"
