--- a/lab03.ipynb
+++ b/lab03.ipynb
@@ -23,13 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "The value is: 42\n"
+     ]
+    }
+   ],
    "source": [
-    "def log(...):\n",
+    "def log(text, param=None):\n",
     "    \" Wypisuje wiadomość opcjonalnie wraz z podaną wartością \"\n",
-    "    pass\n",
+    "    print(f\"{text}: {param}\" if param else f\"{text}\")\n",
     "\n",
     "log(\"Hello World!\") # Hello World!\n",
     "log(\"The value is\", 42) # The value is: 42"
@@ -44,13 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def mean(...):\n",
+    "def mean(*args):\n",
     "    \"\"\"Zwraca średnią liczb podanych jako argumenty pozycyjne\"\"\"\n",
-    "    pass\n",
+    "    return sum([i for i in args]) / len(args) if args else None\n",
     "\n",
     "print(mean(1,2,3) == 2)\n",
     "print(mean(2,2,4,4) == 3)\n",
@@ -66,21 +85,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def check_dictionary_content(...):\n",
+    "def check_dictionary_content(d, **kwargs):\n",
     "    \"\"\"Sprawdza, czy w danym słowniku znajduje się conajmniej podana liczba elementów\"\"\"\n",
-    "    pass\n",
-    "\n",
+    "    for key, value in kwargs.items():\n",
+    "        if d.get(key, 0) < value:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
     "d = {'orange': 3, 'apple': 1, 'dogs': 10}\n",
     "print(check_dictionary_content(d, orange=2) == True)\n",
     "print(check_dictionary_content(d, orange=2, apple=1) == True)\n",
     "print(check_dictionary_content(d, dogs=11) == False)\n",
     "print(check_dictionary_content(d, dogs=9, cats=0) == True)\n",
     "print(check_dictionary_content(d, apple=0, cats=1) == False)\n",
-    "print(check_dictionary_content(d, **d) == True)"
+    "print(check_dictionary_content(d, **d) == True)\n",
+    "print(check_dictionary_content(d) == True)"
    ]
   },
   {
@@ -93,12 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
+    "#mozna uzyc types ale zakladam ze nie jest to oczekiwana odpowiedz\n",
     "def numbers_to_percents(values):\n",
-    "    pass\n",
+    "    values = list(values) #to jest po to ze jesli podany zostanie generator/iterator to zostanie to i tak na liste zmienione\n",
+    "    s = sum(values)\n",
+    "    return [i / s for i in values]\n",
     "\n",
     "print(numbers_to_percents([1,2,1])==[0.25, 0.5, 0.25])\n",
     "print(numbers_to_percents([1])==[1])\n",
@@ -114,10 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.1, 0.2, 0.3, 0.4]\n"
+     ]
+    }
+   ],
    "source": [
+    "#w normalnym przypadku byłby problem z generatorem bo mozna przejsc po nim tylko raz, a wykryc roznice miedzy lista\n",
+    "# a iteratorem mozna zrobic wywolujac try: next(values) i sprawdzic czy wyrzuci bład\n",
     "print(numbers_to_percents(i for i in range(5)))"
    ]
   },
@@ -137,12 +198,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def zwroc_rosnace(...):\n",
-    "    pass\n",
+    "def zwroc_rosnace(f, *args):\n",
+    "    return[i for i in args if f(i) > i]\n",
     "\n",
     "def f1(n):\n",
     "    return n**2-3*n\n",
@@ -167,12 +238,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5]\n",
+      "True\n",
+      "[]\n",
+      "True\n",
+      "['jest', 'fajny']\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def zwroc_rosnace(...):\n",
-    "    pass\n",
+    "def zwroc_rosnace(f, *args):\n",
+    "    return[el for i, el in enumerate(args) if i != 0 and f(el) > f(args[i-1])]\n",
     "\n",
     "def f1(n):\n",
     "    return n**2-3*n\n",
@@ -204,12 +288,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
+    "def count_decorator(f):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        wrapper.count += 1\n",
+    "        return wrapper.count\n",
+    "    wrapper.count = 0\n",
+    "    return wrapper\n",
+    "\n",
+    "@count_decorator\n",
     "def ile_wywolana():\n",
     "    pass\n",
+    "\n",
     "\n",
     "print(ile_wywolana()==1)\n",
     "print(ile_wywolana()==2)\n",
@@ -232,12 +335,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 61 67 71 73 79 83 89 97 101 103 107 109 113 127 131 137 139 149 151 157 163 167 173 179 181 191 193 197 199 211 223 227 229 233 239 241 251 257 263 269 271 277 281 283 293 307 311 313 317 331 337 347 349 353 359 367 373 379 383 389 397 401 409 419 421 431 433 439 443 449 457 461 463 467 479 487 491 499 503 509 521 523 541 "
+     ]
+    }
+   ],
    "source": [
-    "def get_primes(number):\n",
-    "    pass"
+    "def get_primes():\n",
+    "    n = 2\n",
+    "    while True:\n",
+    "        if not [i for i in range(2, int(n**0.5) + 1) if n % i == 0]:\n",
+    "            yield n\n",
+    "        n += 1\n",
+    "        \n",
+    "g = get_primes()\n",
+    "for i in range(100):\n",
+    "    print(next(g), end=' ')"
    ]
   },
   {
@@ -256,13 +375,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "0 True\n",
+      "1 True\n",
+      "2 True\n",
+      "3 True\n",
+      "4 True\n",
+      "5 True\n",
+      "6 True\n",
+      "7 True\n",
+      "8 True\n",
+      "9 True\n",
+      "10 True\n",
+      "11 True\n",
+      "12 True\n",
+      "13 True\n",
+      "14 True\n",
+      "15 True\n",
+      "16 True\n",
+      "17 True\n",
+      "18 True\n",
+      "19 True\n",
+      "20 True\n",
+      "21 True\n",
+      "0 True\n",
+      "1 True\n",
+      "2 True\n",
+      "3 True\n",
+      "4 True\n",
+      "5 True\n",
+      "6 True\n",
+      "7 True\n",
+      "8 True\n",
+      "9 True\n",
+      "10 True\n",
+      "11 True\n",
+      "12 True\n",
+      "13 True\n",
+      "14 True\n",
+      "15 True\n",
+      "16 True\n",
+      "17 True\n",
+      "18 True\n",
+      "19 True\n",
+      "20 True\n",
+      "21 True\n"
+     ]
+    }
+   ],
    "source": [
     "def natural_numbers(k=0):\n",
     "    \"\"\"Tworzy generator liczb naturalnych od liczby k\"\"\"\n",
-    "    pass\n",
+    "    while True:\n",
+    "        yield k\n",
+    "        k += 1\n",
     "\n",
     "import types\n",
     "print(isinstance(natural_numbers(), types.GeneratorType))\n",
@@ -280,13 +453,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "1 True\n",
+      "1 True\n",
+      "2 True\n",
+      "6 True\n",
+      "24 True\n",
+      "120 True\n",
+      "720 True\n",
+      "5040 True\n"
+     ]
+    }
+   ],
    "source": [
     "def factorials():\n",
     "    \"\"\"Tworzy generator kolejnych silnii\"\"\"\n",
-    "    pass\n",
+    "    factorial = 1\n",
+    "    i = 0\n",
+    "    while True:\n",
+    "        yield factorial\n",
+    "        i += 1\n",
+    "        factorial *= i\n",
+    "\n",
     "\n",
     "import types\n",
     "print(isinstance(factorials(), types.GeneratorType))\n",
@@ -307,6 +502,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n",
+      "610\n",
+      "987\n",
+      "1597\n",
+      "2584\n",
+      "4181\n",
+      "6765\n",
+      "10946\n",
+      "17711\n",
+      "28657\n",
+      "46368\n",
+      "75025\n",
+      "121393\n",
+      "196418\n",
+      "317811\n",
+      "514229\n",
+      "832040\n",
+      "1346269\n",
+      "2178309\n",
+      "3524578\n",
+      "5702887\n",
+      "9227465\n",
+      "14930352\n",
+      "24157817\n",
+      "39088169\n",
+      "63245986\n",
+      "102334155\n",
+      "165580141\n",
+      "267914296\n",
+      "433494437\n",
+      "701408733\n",
+      "1134903170\n",
+      "1836311903\n",
+      "2971215073\n",
+      "4807526976\n",
+      "7778742049\n",
+      "12586269025\n",
+      "20365011074\n",
+      "32951280099\n",
+      "53316291173\n",
+      "86267571272\n",
+      "139583862445\n",
+      "225851433717\n",
+      "365435296162\n",
+      "591286729879\n",
+      "956722026041\n",
+      "1548008755920\n",
+      "2504730781961\n",
+      "4052739537881\n",
+      "6557470319842\n",
+      "10610209857723\n",
+      "17167680177565\n",
+      "27777890035288\n",
+      "44945570212853\n",
+      "72723460248141\n",
+      "117669030460994\n",
+      "190392490709135\n",
+      "308061521170129\n",
+      "498454011879264\n",
+      "806515533049393\n",
+      "1304969544928657\n",
+      "2111485077978050\n",
+      "3416454622906707\n",
+      "5527939700884757\n",
+      "8944394323791464\n",
+      "14472334024676221\n",
+      "23416728348467685\n",
+      "37889062373143906\n",
+      "61305790721611591\n",
+      "99194853094755497\n",
+      "160500643816367088\n",
+      "259695496911122585\n",
+      "420196140727489673\n",
+      "679891637638612258\n",
+      "1100087778366101931\n",
+      "1779979416004714189\n",
+      "2880067194370816120\n",
+      "4660046610375530309\n",
+      "7540113804746346429\n",
+      "12200160415121876738\n",
+      "19740274219868223167\n",
+      "31940434634990099905\n",
+      "51680708854858323072\n",
+      "83621143489848422977\n",
+      "135301852344706746049\n",
+      "218922995834555169026\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonaci():\n",
+    "    a = 0\n",
+    "    b = 1\n",
+    "    while True:\n",
+    "        a, b = a + b, a\n",
+    "        yield b\n",
+    "f = fibonaci()\n",
+    "for _ in range(100):\n",
+    "    print(next(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -315,7 +634,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -329,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
