--- a/lab04.ipynb
+++ b/lab04.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -39,11 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.167 kg per second\n"
+     ]
+    }
+   ],
    "source": [
     "flow = flow_rate(weight, time)\n",
     "print(\"{0:.3} kg per second\".format(flow))"
@@ -62,11 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "flow_rate() got an unexpected keyword argument 'period'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m flow \u001b[38;5;241m=\u001b[39m \u001b[43mflow_rate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mperiod\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43munits_per_kg\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m grams per minute\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(flow))\n",
+      "\u001b[0;31mTypeError\u001b[0m: flow_rate() got an unexpected keyword argument 'period'"
+     ]
+    }
+   ],
    "source": [
     "flow = flow_rate(weight, time, period=60, units_per_kg=1000)\n",
     "print(\"{} grams per minute\".format(flow))"
@@ -144,17 +164,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10998821258544922\n",
+      "0.09769248962402344\n",
+      "8.106231689453125e-06\n"
+     ]
+    }
+   ],
    "source": [
     "from time import time\n",
     "\n",
     "def timeit(func):\n",
     "    \"\"\" Wypisuje czas wywołania udekorowanej funckji \"\"\"\n",
-    "    pass\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start = time()\n",
+    "        result = func(*args, **kwargs)\n",
+    "        print(time() - start)\n",
+    "        return result\n",
+    "    return wrapper\n",
     "\n",
     "@timeit\n",
     "def squares_list(n):\n",
@@ -193,11 +228,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "750.2338595048059 750.2238595049866 \t True\n",
+      "422126.88922882074 422126.8795279184 \t True\n",
+      "1183.2520882948302 1183.2420882949868 \t True\n",
+      "1050046.393275261 1050046.379634511 \t True\n",
+      "578.0167251185048 578.0067251179464 \t True\n",
+      "250568.83879005906 250568.83071117994 \t True\n",
+      "1079.139712243341 1079.1297122416333 \t True\n",
+      "873390.7163143157 873390.7018820327 \t True\n",
+      "1491.7772936285473 1491.7672936335525 \t True\n",
+      "1669027.256965637 1669027.2437660801 \t True\n",
+      "1067.7492275368422 1067.7392275376587 \t True\n",
+      "855050.3075122832 855050.2935170371 \t True\n",
+      "623.87708289898 623.8670828996306 \t True\n",
+      "291907.611861825 291907.60284427094 \t True\n",
+      "298.89365532617376 298.88365532641893 \t True\n",
+      "66998.58400970697 66998.5795659612 \t True\n",
+      "991.9606131472392 991.9506131480211 \t True\n",
+      "737974.527478218 737974.5141935514 \t True\n",
+      "1184.7154246584978 1184.7054246590249 \t True\n",
+      "1052645.2273130417 1052645.2074123903 \t True\n",
+      "1152.6167628879193 1152.6067628900312 \t True\n",
+      "996376.7766952513 996376.7623948774 \t True\n",
+      "1050.1880673167761 1050.1780673186374 \t True\n",
+      "827155.491709709 827155.4798078315 \t True\n",
+      "107.07667285396383 107.06667285396732 \t True\n",
+      "8597.455936251208 8597.454327013846 \t True\n",
+      "287.4088938904606 287.39889389067065 \t True\n",
+      "61948.59752431511 61948.59315718573 \t True\n",
+      "376.73202317455434 376.72202317496993 \t True\n",
+      "106439.61774185298 106439.61205878195 \t True\n",
+      "1799.484579556156 1799.474579562736 \t True\n",
+      "2428581.5954208374 2428581.571869364 \t True\n",
+      "810.7411106379004 810.7311106369144 \t True\n",
+      "492963.7119174003 492963.70031592355 \t True\n",
+      "422.2334555517591 422.22345555207676 \t True\n",
+      "133704.49114590883 133704.4848137524 \t True\n",
+      "1580.7564820395783 1580.7464820392813 \t True\n",
+      "1874069.6012973783 1874069.5803596731 \t True\n",
+      "1701.1898124939762 1701.1798125050434 \t True\n",
+      "2170509.5767974854 2170509.565856021 \t True\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.float_info.epsilon # epsilon maszynowy\n",
@@ -208,8 +294,12 @@
     "    Zwraca pochodną funkcji w punkcie, wg. wzoru f'(x) = [f(x+h) - f(x)]/h, \n",
     "    gdzie h jest parametrem dekoratora, jeśli nie zostanie podany, należy przyjąć 1000 * epsilon maszynowy\n",
     "    \"\"\"\n",
-    "    pass\n",
-    "\n",
+    "     epsilon = epsilon if epsilon is not None else 1000 * sys.float_info.epsilon\n",
+    "     def decorator(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            return (func(args[0] + epsilon) - func(args[0])) / epsilon\n",
+    "        return wrapper\n",
+    "     return decorator\n",
     "\n",
     "@derivate(0.01)\n",
     "def f(x):\n",
@@ -250,16 +340,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def accepts(*types):\n",
     "    \"\"\"Sprawdza czy udekorowanej funckji zostały podane odpowiednie parametry zdefiniowane \n",
     "       w argumentach dekoratora\"\"\"\n",
-    "    pass\n",
+    "    def decorator(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            if any([1 for arg in args if type(arg) not in types]):\n",
+    "                raise TypeError\n",
+    "            result = func(*args, **kwargs)\n",
+    "            return result\n",
+    "        return wrapper\n",
+    "    return decorator\n",
     "\n",
     "\n",
     "@accepts(str)\n",
@@ -308,15 +418,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def returns(*types):\n",
     "    \"\"\"Sprawdza czy udekorowana funkcja zwraca poprawne argumenty, zdefiniowane w parametrach dekoratora\"\"\"\n",
-    "    pass\n",
+    "    def decorator(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            result = func(*args, **kwargs)\n",
+    "            if (types is tuple and result is not tuple) or any([1 for re in result if type(re) not in types]):\n",
+    "                raise TypeError\n",
+    "            else:\n",
+    "                return result\n",
+    "        return wrapper\n",
+    "    return decorator\n",
     "\n",
     "\n",
     "@returns(str)\n",
@@ -337,7 +466,7 @@
     "print(split_indices(x=[6,9]) == (6,9))\n",
     "\n",
     "try:\n",
-    "    split('AB')\n",
+    "    split_indices('AB')\n",
     "except TypeError:\n",
     "    print(True)"
    ]
@@ -396,14 +525,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def zlozenie(n):\n",
-    "    pass\n",
+    "    def decorator(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            result = args[0]\n",
+    "            for i in range(n):\n",
+    "                result = func(result)\n",
+    "            return result\n",
+    "        return wrapper\n",
+    "    return decorator\n",
     "\n",
     "@zlozenie(3)\n",
     "def f1(x):\n",
@@ -452,14 +598,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def my_function(x, y):\n",
-    "    pass\n",
+    "    dict = {\n",
+    "        1: lambda x,y : y**2,\n",
+    "        2: lambda x,y : x+y,\n",
+    "        3: lambda x,y : x*y,\n",
+    "        4: lambda x,y: 0 \n",
+    "        }\n",
+    "    return dict[x](x, y)\n",
     "\n",
     "print(my_function(1,3)==9)\n",
     "print(my_function(2,4)==6)\n",
@@ -470,7 +633,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -484,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
