--- a/self_tests.ipynb
+++ b/self_tests.ipynb
@@ -2,32 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 1\n",
-      "0 2 1\n",
-      "0 2 2\n",
-      "0 3 1\n",
-      "0 3 2\n",
-      "0 3 3\n",
-      "1 2 1\n",
-      "1 3 1\n",
-      "1 3 2\n",
-      "2 3 1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "range"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for j in range(3):\n",
-    "    for k in range(j + 1, 4):\n",
-    "        for l in range(1, k+1):\n",
-    "            if j + l <= k:\n",
-    "                print(j, k, l)\n"
+    "a = range(5)\n",
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(3, 1):\n",
+    "    print(j)"
    ]
   },
   {
