--- a/lab04.ipynb
+++ b/lab04.ipynb
@@ -23,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def flow_rate(weight, time):\n",
+    "def flow_rate(weight, time, period=1, units_per_kg=1):\n",
     "    \"\"\" Funkcja wylicza ile wagi produktu przybyło/ubyło w jednostce czasu \"\"\"\n",
-    "    return weight / time\n",
+    "    return (weight / time) * period * units_per_kg\n",
     "\n",
     "weight = 0.5\n",
     "time = 3"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -59,31 +59,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3635264092.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    Zmodyfikuj funckje <i>flow_rate</i> tak, aby poniższe wywołania działały poprawnie.\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Zmodyfikuj funckje <i>flow_rate</i> tak, aby poniższe wywołania działały poprawnie."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "flow_rate() got an unexpected keyword argument 'period'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m flow \u001b[38;5;241m=\u001b[39m \u001b[43mflow_rate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mperiod\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43munits_per_kg\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m grams per minute\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(flow))\n",
-      "\u001b[0;31mTypeError\u001b[0m: flow_rate() got an unexpected keyword argument 'period'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000.0 grams per minute\n"
      ]
     }
    ],
@@ -94,11 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.167 kg per second\n"
+     ]
+    }
+   ],
    "source": [
     "flow = flow_rate(weight, time, period=1, units_per_kg=1)\n",
     "print(\"{0:.3} kg per second\".format(flow))"
@@ -106,11 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.167 grams per minute\n"
+     ]
+    }
+   ],
    "source": [
     "flow = flow_rate(weight, time)\n",
     "print(\"{0:.3} grams per minute\".format(flow))"
@@ -125,16 +146,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    flow = flow_rate(weight, time, 3600, 2.2)\n",
     "except TypeError:\n",
-    "    print(True)"
+    "    print(True)\n",
+    "#Ponieważ argumenty pozycyjne muszą zostać przekazane z nazwą"
    ]
   },
   {
@@ -164,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -173,9 +203,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.10998821258544922\n",
-      "0.09769248962402344\n",
-      "8.106231689453125e-06\n"
+      "Function foo took: 0.055675506591796875 seconds\n",
+      "Function foo took: 0.04542875289916992 seconds\n",
+      "Function foo took: 6.4373016357421875e-06 seconds\n"
      ]
     }
    ],
@@ -187,7 +217,7 @@
     "    def wrapper(*args, **kwargs):\n",
     "        start = time()\n",
     "        result = func(*args, **kwargs)\n",
-    "        print(time() - start)\n",
+    "        print(f\"Function foo took: {time() - start} seconds\")\n",
     "        return result\n",
     "    return wrapper\n",
     "\n",
@@ -487,13 +517,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from random import random\n",
+    "from functools import wraps\n",
+    "\n",
+    "def cached(f):\n",
+    "    f.cache = dict()\n",
+    "    f.called = 0\n",
+    "    f.evaluated = 0\n",
+    "    def cache_reset():\n",
+    "        f.cache.clear()\n",
+    "\n",
+    "    def cache_status():\n",
+    "        return f\"Function {f.__name__} called {f.called} times, evaluated {f.evaluated} times\"\n",
+    "    \n",
+    "    f.cache_reset = cache_reset\n",
+    "    f.cache_status = cache_status\n",
+    "\n",
+    "    @wraps(f)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        f.called += 1\n",
+    "        if f.cache.get((args, tuple(sorted(kwargs)))) is None:\n",
+    "            f.evaluated += 1\n",
+    "            f.cache[(args, tuple(sorted(kwargs)))] = f(*args, **kwargs)\n",
+    "        return f.cache.get((args, tuple(sorted(kwargs)))) \n",
+    "    return wrapper\n",
     "\n",
     "@cached\n",
     "def foo(x, y=1, z=4):\n",
