--- a/self_tests.ipynb
+++ b/self_tests.ipynb
@@ -2,33 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = range(5)\n",
-    "type(a)"
+    "def decorator(f):\n",
+    "    f.counter = 0  # Initialize a counter for each function\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        wrapper.counter += 1  # Increment the counter for the specific function\n",
+    "        result = f(*args, **kwargs)\n",
+    "        print(f\"{f.__name__} has been called {wrapper.counter} times\")\n",
+    "        return result\n",
+    "    wrapper.counter = 0  # Initialize the counter for this specific wrapper\n",
+    "    return wrapper\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g has been called 1 times\n",
+      "g has been called 2 times\n",
+      "t has been called 1 times\n",
+      "t has been called 2 times\n"
+     ]
+    }
+   ],
    "source": [
-    "for j in range(3, 1):\n",
-    "    print(j)"
+    "@decorator\n",
+    "def g():\n",
+    "    pass\n",
+    "\n",
+    "@decorator\n",
+    "def t():\n",
+    "    pass\n",
+    "g()\n",
+    "g()\n",
+    "t()\n",
+    "t()"
    ]
   },
   {
