--- a/part01.ipynb
+++ b/part01.ipynb
@@ -2636,7 +2636,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -2650,7 +2650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
