--- a/part03.ipynb
+++ b/part03.ipynb
@@ -1490,7 +1490,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -1504,7 +1504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
