--- a/self_tests.ipynb
+++ b/self_tests.ipynb
@@ -19,32 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g has been called 1 times\n",
-      "g has been called 2 times\n",
-      "t has been called 1 times\n",
-      "t has been called 2 times\n"
+      "['A', 'L', 'A', ' ', 'M', 'A', ' ', 'K', 'O', 'T', 'A']\n"
      ]
     }
    ],
    "source": [
-    "@decorator\n",
-    "def g():\n",
-    "    pass\n",
-    "\n",
-    "@decorator\n",
-    "def t():\n",
-    "    pass\n",
-    "g()\n",
-    "g()\n",
-    "t()\n",
-    "t()"
+    "print(list(map(lambda x: x.upper(), 'ala ma kota')))"
    ]
   },
   {
