--- a/3010_exercises.ipynb
+++ b/3010_exercises.ipynb
@@ -52,16 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5]\n",
-      "0\n",
-      "False\n",
+      "True\n",
       "0\n",
       "True\n"
      ]
@@ -125,7 +123,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ef_python",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -139,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
