--- a/lab05.ipynb
+++ b/lab05.ipynb
@@ -24,13 +24,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def _filter(func=None, iterable=[]):\n",
     "    \"\"\"Filtruje z iterable elementy, dla których funkcja func zwraca False zostawiając pozostałe\"\"\"\n",
-    "    pass\n",
+    "    if not func: func = lambda x: x\n",
+    "    for it in iterable:\n",
+    "        if func(it):\n",
+    "            yield it\n",
     "            \n",
     "from types import GeneratorType\n",
     "print(isinstance(_filter(), GeneratorType))\n",
@@ -49,13 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def _map(func, iterable, *args):\n",
     "    \"\"\"Mapuje elementy iterable na wartości fuknckji func\"\"\"\n",
-    "    pass\n",
+    "    for it in zip(*[iterable, *args]):\n",
+    "        yield func(*it)\n",
     "\n",
     "\n",
     "from types import GeneratorType\n",
@@ -82,12 +108,44 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('aa', 'aa'), ('ab', 'ba')]\n",
+      "[('ab', 'ba')]\n",
+      "['ba']\n",
+      "('ab', 'ba')\n",
+      "False\n",
+      "[('eht', 'the'), ('dog', 'god'), ('ala', 'ala')]\n",
+      "[('eht', 'the'), ('dog', 'god')]\n",
+      "['the', 'god']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "reverse_nonpalindromes.<locals>.<lambda>() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[46], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m reduce(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x, x[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]), words)))\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(reverse_nonpalindromes([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maa\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mab\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m==\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mba\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mreverse_nonpalindromes\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43meht\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdog\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mala\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m==\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthe\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgod\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[46], line 8\u001b[0m, in \u001b[0;36mreverse_nonpalindromes\u001b[0;34m(words)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x, x[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]), words))))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x, x[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]), words)))))\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mreduce\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mfilter\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m!=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwords\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m reduce(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m x[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x, x[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]), words)))\n",
+      "\u001b[0;31mTypeError\u001b[0m: reverse_nonpalindromes.<locals>.<lambda>() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
    "source": [
+    "from functools import reduce\n",
     "def reverse_nonpalindromes(words):\n",
     "    \"\"\"Zwraca listę odwróconych słowa które nie są palindromami. \n",
     "    Palindromy zostają pominięte\"\"\"\n",
-    "    pass\n",
+    "    print(list(map(lambda x: (x, x[::-1]), words)))\n",
+    "    print(list(filter(lambda x: x[0] != x[1], map(lambda x: (x, x[::-1]), words))))\n",
+    "    print(list(map(lambda x: x[1], filter(lambda x: x[0] != x[1], map(lambda x: (x, x[::-1]), words)))))\n",
+    "    print(reduce(lambda x, y: x[1], filter(lambda x: x[0] != x[1], map(lambda x: (x, x[::-1]), words))))\n",
+    "    return reduce(lambda x: x[1], filter(lambda x: x[0] != x[1], map(lambda x: (x, x[::-1]), words)))\n",
     "\n",
     "print(reverse_nonpalindromes([\"aa\", \"ab\"])==[\"ba\"])\n",
     "print(reverse_nonpalindromes([\"eht\", \"dog\", \"ala\"])==[\"the\", \"god\"])"
@@ -317,7 +375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "EF_Python",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
